@@ -317,4 +317,5 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 	  Removed deprecated, commented-out members (NumNext, NumLayers, NumMips).
 	* Updated several functions with appropriate Doxygen comments.
 	* il.h: Updated IL_XXX file format defines with Doxygen comments.
+	* ilu_rotate.c: Changed min/max calls to IL_MIN/IL_MAX.
 	
